# kuvasivu

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  REUSE.toml  site.toml
.claude/: reliability-config.yaml
.config/: goblinmode.toml
.github/: zizmor.yml
.github/workflows/: ci.yml  docker.yml
src/: exif.rs  lib.rs  main.rs
static/: style.css
templates/: album.html  base.html  index.html  photo.html
tests/: docker_test.sh  main_tests.rs
tests/fixtures/: DSCF0263.jpg.license
tests/snapshots/: main_tests__album_page.snap  main_tests__index_empty.snap  main_tests__index_page.snap  main_tests__photo_page_first.snap  main_tests__photo_page_last.snap  main_tests__photo_page_middle.snap
